shifting/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: booking-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts: "booking.example.com"
    name: booking
    port:
      number: 80
      name: http
      protocol: HTTP
